# win-audio-devices-cli

./: Cargo.toml  LICENSE  README.md  test_commands.sh
src/: contract.rs  main.rs  models.rs  specs.rs  switcher.rs  view_models.rs
