[package]
name = "win-audio-devices-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wadc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
com-policy-config = { version = "0.3.0", path = "../com-policy-config" }
false = "0.0.0"
log = "0.4.17"
opentelemetry = { version = "0.20.0", features = ["logs"] }
opentelemetry-appender-log = { version = "0.1.0", default-features = false }
opentelemetry-stdout = { version = "0.1.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.20.0", features = ["logs"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
wasapi = { version = "0.13.0", path = "../wasapi-rs" }
